
cc_library(
	name = "program_options",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_any//:any",
		"@com_github_bazelboost_lexical_cast//:lexical_cast"
	],
)
